--- a/index.html
+++ b/index.html
@@ -5,12 +5,36 @@
   <body>
     <header>
       <h1 style="color:blue">
-        мой сайт о рыбалке
+        Карелия-край озёр
       </h1>
+      <h2>
+        мой сайт о рыбалке
+      </h2>
     </header>
     <main style="background-color: lightgray">
-      <p>рыбы рыбы рыбы
+      
+      <img src="https://learn.algoritmika.org/uploads/student/3499745/678b71ff09301.PNG">
+      <p>
+        рыбы рыбы рыбы
       </p>
+      <table style="border: 1px solid black">
+        <tr>
+          <td>
+          </td>
+          <td>
+          </td>
+          <td>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <td>
+          </td>
+          <td>
+          </td>
+        </tr>
+      </table>
     </main>
     <footer style="text-align: center">
       2025
